--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,5 @@ theme: hueman
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/pr-lawrence/pr-lawrence.github.io
