--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: For developer
 subtitle:
 description:
 keywords:
-author: John Doe
-language:
+author: Lawrence Kim
+language: Korean
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://blog.lawrence.pr.kr
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
