--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,8 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
+plugins:
+  - hexo-generator-cname
 theme: hueman
 
 # Deployment
