--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "eslint": "^5.12.1",
     "hexo": "^3.7.0",
+    "hexo-auto-canonical": "^0.1.1",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-cname": "^0.3.0",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-json-content": "^3.0.1",
+    "hexo-generator-robotstxt": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
