--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://blog.lawrence.pr.kr
+url: http://blog.lawrence.pe.kr
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
