--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: true 
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -43,16 +43,16 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: ""
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -75,9 +75,27 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: hueman
 
+plugins:
+  google_analytics: UA-108001668-1
+
+# nofollow
+nofollow:
+  enable: true
+
+# sitemap
+sitemap:
+  path: sitemap.xml
+
+# feed
+feed:
+  type: atom
+  path: feed.xml
+  limit: false
+  hub:
+
 # robots.txt
 robotstxt:
-  User-agent: '*'
+  User-agent: "*"
   Allow: /
   Sitemap: /sitemap.xml
 
