--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,16 @@
 
 # Site
 title: Lawrence's blog
-subtitle:
+subtitle: the law of development
 description:
 keywords:
 author: Lawrence Kim
 language: ko
-timezone:
+timezone: Asia/Seoul
+
+
+
+
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
